# AEvent-AI-Agent

./: .env  .env.example  .replit  agent_worker.py  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_agent.sh  start_all.sh
.local/state/replit/agent/filesystem/: filesystem_state.json
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: agent-status-indicator.tsx  chat-interface.tsx  connection-quality.tsx  control-bar.tsx  image-upload.tsx  message-bubble.tsx  settings-modal.tsx  theme-toggle.tsx  video-display.tsx
client/src/pages/: agent-room.tsx  home.tsx
server/: env.ts  index.ts  livekit.ts  routes.ts  storage.ts
shared/: schema.ts
